--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.mapstruct:mapstruct:1.5.1.Final'
+
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.1.Final'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly("mysql:mysql-connector-java:8.0.25")
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
