--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8090
+spring.profile.active=dev
 
+spring.datasource.url=jdbc:mysql://localhost:3306/market?useSSL=false&serverTimezone=Europe/Madrid
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
